Fix alignment on About Us text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,18 +162,16 @@ header a {
     height: 100%;
     width: 100%;
     z-index: 10000;
-    display: flex;
-    align-items: center;
+    display: none;
 }
 
 .about-us-text p {
+
     color: white;
-    /* text-align: center; */
     height: 100%;
-    /* vertical-align: center; */
-    /* padding-top: 10%;
+    padding-top: 10%;
     padding-left: 0.9rem;
-    padding-right: 0.9rem; */
+    padding-right: 0.9rem;
 }
 
 
